--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "gh-pages": "^5.0.0",
     "moment": "^2.29.4",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-emoji": "^4.3.0",
